Fixed issue in workflow tags

--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -3,7 +3,7 @@ run-name: Training Run
 on:
   push:
     tags:
-      - "run_training"
+      - "train/*"
 jobs:
   train-model:
     runs-on: ubuntu-latest
