--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -12,6 +12,7 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -32,6 +33,13 @@ fonttools==4.51.0
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.3.1
+google-api-core==2.18.0
+google-auth==2.29.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.16.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
 grpcio==1.62.2
 h11==0.14.0
 httpcore==1.0.5
@@ -96,12 +104,15 @@ pillow==10.3.0
 platformdirs==4.2.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+proto-plus==1.23.0
 protobuf==3.20.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==15.0.2
 pyarrow-hotfix==0.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 Pygments==2.17.2
 pyparsing==3.1.2
@@ -116,6 +127,7 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.0
+rsa==4.9
 safetensors==0.4.3
 Send2Trash==1.8.3
 six==1.16.0
