--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 accelerate==0.29.3
 aiohttp==3.9.5
 aiosignal==1.3.1
+annotated-types==0.6.0
 anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -10,12 +11,14 @@ asttokens==2.4.1
 async-lru==2.0.4
 attrs==23.2.0
 Babel==2.14.0
+backoff==2.2.1
 beautifulsoup4==4.12.3
 bleach==6.1.0
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -27,14 +30,17 @@ defusedxml==0.7.1
 diffusers==0.27.2
 dill==0.3.8
 executing==2.0.1
+fastapi==0.110.2
 fastjsonschema==2.19.1
 filelock==3.13.4
+fire==0.6.0
 fonttools==4.51.0
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.3.1
 google-api-core==2.18.0
 google-auth==2.29.0
+google-auth-httplib2==0.2.0
 google-cloud-core==2.4.1
 google-cloud-storage==2.16.0
 google-crc32c==1.5.0
@@ -43,6 +49,7 @@ googleapis-common-protos==1.63.0
 grpcio==1.62.2
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.22.0
 httpx==0.27.0
 huggingface-hub==0.22.2
 idna==3.7
@@ -66,10 +73,14 @@ jupyterlab==4.1.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.26.0
 kiwisolver==1.4.5
+lightning-utilities==0.11.2
+lightning_sdk==0.1.5
 Markdown==3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==3.0.2
 mpmath==1.3.0
 multidict==6.0.5
@@ -114,10 +125,14 @@ pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
 Pygments==2.17.2
+PyJWT==2.8.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.1
@@ -126,17 +141,21 @@ regex==2024.4.16
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
 safetensors==0.4.3
 Send2Trash==1.8.3
+simple-term-menu==1.6.4
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
+starlette==0.37.2
 sympy==1.12
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
+termcolor==2.4.0
 terminado==0.18.1
 tinycss2==1.2.1
 tokenizers==0.19.1
@@ -151,7 +170,9 @@ types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
 tzdata==2024.1
 uri-template==1.3.0
+uritemplate==4.1.1
 urllib3==2.2.1
+uvicorn==0.29.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
