--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: "google-github-actions/auth@v2"
-        with:
-          credentials_json: "${{ secrets.GOOGLE_CREDENTIALS }}" # Replace with the name of your GitHub Actions secret
+      # - uses: "google-github-actions/auth@v2"
+      #   with:
+      #     credentials_json: "${{ secrets.GOOGLE_CREDENTIALS }}" # Replace with the name of your GitHub Actions secret
       # - uses: actions/setup-python@v5
       #   with:
       #     python-version: "3.11"
