--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -1,22 +1,46 @@
 name: training
-run-name: Training Run
+run-name: Build and Test Training Pipeline
 on:
   push:
     tags:
       - "train/*"
 jobs:
-  train-model:
+  build:
     runs-on: ubuntu-latest
     steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Google Artifact Registry
+        uses: docker/login-action@v3
+        with:
+          registry: https://europe-west9-docker.pkg.dev
+          username: _json_key_base64
+          password: ${{ secrets.ARTIFACT_REGISTRY_ACCOUNT }}
+      - name: Build and export
+        uses: docker/build-push-action@v5
+        with:
+          context: training/
+          tags: europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest
+          outputs: type=docker,dest=/tmp/pokemon-trainer.tar
+      - name: Upload artifact locally
+        uses: actions/upload-artifact@v3
+        with:
+          name: pokemon-trainer
+          path: /tmp/pokemon-trainer.tar
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - uses: actions/checkout@v4
-      # - uses: "google-github-actions/auth@v2"
-      #   with:
-      #     credentials_json: "${{ secrets.GOOGLE_CREDENTIALS }}" # Replace with the name of your GitHub Actions secret
-      # - uses: actions/setup-python@v5
-      #   with:
-      #     python-version: "3.11"
-      #     cache: "pip" # caching pip dependencies
-      # - run: pip install -r training/requirements.txt
-      - run: echo "${{ secrets.ARTIFACT_REGISTRY_ACCOUNT }}" | docker login -u _json_key_base64 --password-stdin https://europe-west9-docker.pkg.dev
-      - run: docker build -t europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer training/
-      - run: docker push europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: pokemon-trainer
+          path: /tmp
+      - name: Load image
+        run: |
+          docker load --input /tmp/pokemon-trainer.tar
+          docker image ls -a
