Reverted pipeline to simple version again

--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -19,11 +19,8 @@ jobs:
           username: _json_key_base64
           password: ${{ secrets.ARTIFACT_REGISTRY_ACCOUNT }}
       - name: Build and export
-        uses: docker/build-push-action@v5
-        with:
-          context: training/
-          tags: europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest
-          outputs: type=docker,dest=/tmp/pokemon-trainer.tar
+        run: docker build --output type=tar,dest=/tmp/pokemon-trainer.tar -t europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer training/
+        run: docker push europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest
       - name: Upload artifact locally
         uses: actions/upload-artifact@v3
         with:
