--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -10,35 +10,37 @@ jobs:
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to Google Artifact Registry
         uses: docker/login-action@v3
         with:
           registry: https://europe-west9-docker.pkg.dev
           username: _json_key_base64
           password: ${{ secrets.ARTIFACT_REGISTRY_ACCOUNT }}
+
       - name: Build and export
-        run: |
-          docker build --output type=tar,dest=/tmp/pokemon-trainer.tar -t europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer training/
-          docker push europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest
-      - name: Upload artifact locally
-        uses: actions/upload-artifact@v3
+        uses: docker/build-push-action@v5
         with:
-          name: pokemon-trainer
-          path: /tmp/pokemon-trainer.tar
+          context: training/
+          tags: europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest
 
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v4
-      - name: Download artifact
-        uses: actions/download-artifact@v3
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: Login to Google Artifact Registry
+        uses: docker/login-action@v3
         with:
-          name: pokemon-trainer
-          path: /tmp
-      - name: Load image
+          registry: https://europe-west9-docker.pkg.dev
+          username: _json_key_base64
+          password: ${{ secrets.ARTIFACT_REGISTRY_ACCOUNT }}
+
+      - name: Run pipeline in testing mode
         run: |
-          docker load --input /tmp/pokemon-trainer.tar
-          docker image ls -a
+          docker run europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest
