--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: "3.11"
       - name: "Install lightning sdk"
-        run: "pip install ./ci/requirements.txt"
+        run: "pip install -r ./ci/requirements.txt"
       - name: "Start Lightning Studio and pull code"
         run: "python ./ci/start_studio.py"
         env: # the following values are parsed from the repository secrets
