--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -1,4 +1,4 @@
-name: training
+name: Training
 run-name: Build and Test Training Pipeline
 on:
   push:
@@ -7,6 +7,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      LIGHTNING_USER_ID: ${{ secrets.LIGHTNING_USER_ID }}
+      LIGHTNING_API_KEY: ${{ secrets.LIGHTNING_API_KEY }}
+      LIGHTNING_ORGANIZATION: ${{ secrets.LIGHTNING_ORGANIZATION }}
+      LIGHTNING_STUDIO: ${{ secrets.LIGHTNING_STUDIO }}
+      LIGHTNING_TEAMSPACE: ${{ secrets.LIGHTNING_TEAMSPACE }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
@@ -19,6 +25,8 @@ jobs:
         run: "pip install -r ./ci/requirements.txt"
       - name: "Start Lightning Studio and pull code"
         run: "python ./ci/start_studio.py"
-        env: # the following values are parsed from the repository secrets
-          LIGHTNING_USER_ID: ${{ secrets.LIGHTNING_USER_ID }}
-          LIGHTNING_API_KEY: ${{ secrets.LIGHTNING_API_KEY }}
+      - name: "Testing pipeline on CPU"
+        run: "python ./ci/test_pipeline.py"
+      - name: "Stop Lightning Studio"
+        if: always()
+        run: "python ./ci/shutdown_studio.py"
