--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.3.0
+appdirs==1.4.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -29,6 +30,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 diffusers==0.27.2
 dill==0.3.8
+docker-pycreds==0.4.0
 executing==2.0.1
 fastapi==0.110.2
 fastjsonschema==2.19.1
@@ -38,6 +40,8 @@ fonttools==4.51.0
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.43
 google-api-core==2.18.0
 google-auth==2.29.0
 google-auth-httplib2==0.2.0
@@ -146,8 +150,12 @@ rpds-py==0.18.0
 rsa==4.9
 safetensors==0.4.3
 Send2Trash==1.8.3
+sentry-sdk==2.0.1
+setproctitle==1.3.3
+setuptools==69.5.1
 simple-term-menu==1.6.4
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
@@ -173,6 +181,7 @@ uri-template==1.3.0
 uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.29.0
+wandb==0.16.6
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
