--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,10 +7,25 @@ steps:
         "europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer:latest",
         "training/Dockerfile",
       ]
-
   - name: "gcr.io/cloud-builders/docker"
-    args: ["run", '-e LIGHTNING_API_KEY', '-e LIGHTNING_USER_ID', '-e LIGHTNING_ORGANIZATION', '-e LIGHTNING_TEAMSPACE', '-e LIGHTNING_STUDIO', 'europe-west9-docker.pkg.dev/algorithmic-quartet/lightning-executor:latest']
-   secretEnv: ['LIGHTNING_API_KEY', 'LIGHTNING_USER_ID', 'LIGHTNING_ORGANIZATION', 'LIGHTNING_TEAMSPACE', 'LIGHTNING_STUDIO']
+    args:
+      [
+        "run",
+        "-e LIGHTNING_API_KEY",
+        "-e LIGHTNING_USER_ID",
+        "-e LIGHTNING_ORGANIZATION",
+        "-e LIGHTNING_TEAMSPACE",
+        "-e LIGHTNING_STUDIO",
+        "europe-west9-docker.pkg.dev/algorithmic-quartet/lightning-executor:latest",
+      ]
+    secretEnv:
+      [
+        "LIGHTNING_API_KEY",
+        "LIGHTNING_USER_ID",
+        "LIGHTNING_ORGANIZATION",
+        "LIGHTNING_TEAMSPACE",
+        "LIGHTNING_STUDIO",
+      ]
 
 availableSecrets:
   secretManager:
