--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,11 +11,11 @@ steps:
     args:
       [
         "run",
-        "-e LIGHTNING_API_KEY",
-        "-e LIGHTNING_USER_ID",
-        "-e LIGHTNING_ORGANIZATION",
-        "-e LIGHTNING_TEAMSPACE",
-        "-e LIGHTNING_STUDIO",
+        "-e $$LIGHTNING_API_KEY",
+        "-e $$LIGHTNING_USER_ID",
+        "-e $$LIGHTNING_ORGANIZATION",
+        "-e $$LIGHTNING_TEAMSPACE",
+        "-e $$LIGHTNING_STUDIO",
         "europe-west9-docker.pkg.dev/algorithmic-quartet/lightning-executor:latest",
       ]
     secretEnv:
@@ -29,13 +29,13 @@ steps:
 
 availableSecrets:
   secretManager:
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_API_KEY
+    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_API_KEY/versions/latest
       env: "LIGHTNING_API_KEY"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_USER_ID
+    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_USER_ID/versions/latest
       env: "LIGHTNING_USER_ID"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_ORGANIZATION
+    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_ORGANIZATION/versions/latest
       env: "LIGHTNING_ORGANIZATION"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_TEAMSPACE
+    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_TEAMSPACE/versions/latest
       env: "LIGHTNING_TEAMSPACE"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_STUDIO
+    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_STUDIO/versions/latest
       env: "LIGHTNING_STUDIO"
