--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,15 +8,14 @@ steps:
   #       "training/",
   #     ]
   - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
     args:
       [
-        "run",
-        "-e $$LIGHTNING_API_KEY",
-        "-e $$LIGHTNING_USER_ID",
-        "-e $$LIGHTNING_ORGANIZATION",
-        "-e $$LIGHTNING_TEAMSPACE",
-        "-e $$LIGHTNING_STUDIO",
-        "europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/lightning-executor:latest",
+        "-c"
+        "docker run -e LIGHTNING_API_KEY -e LIGHTNING_USER_ID -e LIGHTNING_ORGANIZATION -e LIGHTNING_TEAMSPACE -e LIGHTNING_STUDIO europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/lightning-executor:latest",
       ]
-    # images:
-    #   - "europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/lightning-executor:latest"
+    secretEnv: ['LIGHTNING_API_KEY']
+availableSecrets:
+  secretManager:
+    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_API_KEY/versions/latest
+      env: "LIGHTNING_API_KEY"
