--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,10 +11,10 @@ steps:
     entrypoint: "bash"
     args:
       [
-        "-c"
+        "-c",
         "docker run -e LIGHTNING_API_KEY -e LIGHTNING_USER_ID -e LIGHTNING_ORGANIZATION -e LIGHTNING_TEAMSPACE -e LIGHTNING_STUDIO europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/lightning-executor:latest",
       ]
-    secretEnv: ['LIGHTNING_API_KEY']
+    secretEnv: ["LIGHTNING_API_KEY"]
 availableSecrets:
   secretManager:
     - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_API_KEY/versions/latest
