--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,14 +2,17 @@ steps:
   - name: "gcr.io/cloud-builders/docker"
     entrypoint: "bash"
     args:
-      ["-c", "docker pull gcr.io/$PROJECT_ID/pokemon-trainer:latest || exit 0"]
+      [
+        "-c",
+        "docker pull europe-west9-docker.pkg.dev/$PROJECT_ID/pokemon-trainer:latest || exit 0",
+      ]
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "build",
         "--output=type=registry",
         "-t",
-        "europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer",
+        "europe-west9-docker.pkg.dev/$PROJECT_ID/training-pipelines/pokemon-trainer",
         "--cache-from",
         "gcr.io/$PROJECT_ID/pokemon-trainer:latest",
         "training/",
@@ -19,7 +22,7 @@ steps:
     args:
       [
         "-c",
-        "docker run -i -e LIGHTNING_API_KEY -e LIGHTNING_USER_ID -e LIGHTNING_ORGANIZATION -e LIGHTNING_TEAMSPACE -e LIGHTNING_STUDIO -e WANDB_API_KEY -e GC_BUCKET_KEY europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/lightning-executor:latest",
+        "docker run -i -e LIGHTNING_API_KEY -e LIGHTNING_USER_ID -e LIGHTNING_ORGANIZATION -e LIGHTNING_TEAMSPACE -e LIGHTNING_STUDIO -e WANDB_API_KEY -e GC_BUCKET_KEY europe-west9-docker.pkg.dev/$PROJECT_ID/training-pipelines/lightning-executor:latest",
       ]
     secretEnv:
       [
@@ -32,21 +35,21 @@ steps:
         "GC_BUCKET_KEY",
       ]
 images:
-  - "europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/pokemon-trainer"
-  - "europe-west9-docker.pkg.dev/algorithmic-quartet/training-pipelines/lightning-executor"
+  - "europe-west9-docker.pkg.dev/$PROJECT_ID/training-pipelines/pokemon-trainer"
+  - "europe-west9-docker.pkg.dev/$PROJECT_ID/training-pipelines/lightning-executor"
 availableSecrets:
   secretManager:
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_API_KEY/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/LIGHTNING_API_KEY/versions/latest
       env: "LIGHTNING_API_KEY"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_USER_ID/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/LIGHTNING_USER_ID/versions/latest
       env: "LIGHTNING_USER_ID"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_ORGANIZATION/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/LIGHTNING_ORGANIZATION/versions/latest
       env: "LIGHTNING_ORGANIZATION"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_TEAMSPACE/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/LIGHTNING_TEAMSPACE/versions/latest
       env: "LIGHTNING_TEAMSPACE"
-    - versionName: projects/algorithmic-quartet/secrets/LIGHTNING_STUDIO/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/LIGHTNING_STUDIO/versions/latest
       env: "LIGHTNING_STUDIO"
-    - versionName: projects/algorithmic-quartet/secrets/WANDB_API_KEY/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/WANDB_API_KEY/versions/latest
       env: "WANDB_API_KEY"
-    - versionName: projects/algorithmic-quartet/secrets/GC_BUCKET_KEY/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/GC_BUCKET_KEY/versions/latest
       env: "GC_BUCKET_KEY"
