--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     args:
       [
         "-c",
-        "docker pull europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor:latest || exit 0",
+        "docker pull us-west2-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor:latest || exit 0",
       ]
   - name: "gcr.io/cloud-builders/docker"
     id: BuildLightningExecutor
@@ -17,9 +17,9 @@ steps:
       [
         "build",
         "-t",
-        "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor",
+        "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor",
         "--cache-from",
-        "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor:latest",
+        "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor:latest",
         ".",
       ]
   - name: "gcr.io/cloud-builders/docker"
@@ -29,7 +29,7 @@ steps:
     args:
       [
         "push",
-        "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor",
+        "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor",
       ]
   # Build training pipeline
   - name: "gcr.io/cloud-builders/docker"
@@ -39,7 +39,7 @@ steps:
     args:
       [
         "-c",
-        "docker pull europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer:latest || exit 0",
+        "docker pull us-west2-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer:latest || exit 0",
       ]
   - name: "gcr.io/cloud-builders/docker"
     id: BuildTrainingPipeline
@@ -50,9 +50,9 @@ steps:
       [
         "build",
         "-t",
-        "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer",
+        "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer",
         "--cache-from",
-        "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer:latest",
+        "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer:latest",
         ".",
       ]
   - name: "gcr.io/cloud-builders/docker"
@@ -62,7 +62,7 @@ steps:
     args:
       [
         "push",
-        "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer",
+        "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer",
       ]
   # Run Lightning Executor
   - name: "gcr.io/cloud-builders/docker"
@@ -74,7 +74,7 @@ steps:
     args:
       [
         "-c",
-        "docker run -i -e LIGHTNING_API_KEY -e LIGHTNING_USER_ID -e LIGHTNING_ORGANIZATION -e LIGHTNING_TEAMSPACE -e LIGHTNING_STUDIO -e WANDB_API_KEY -e GC_BUCKET_KEY europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor:latest",
+        "docker run -i -e LIGHTNING_API_KEY -e LIGHTNING_USER_ID -e LIGHTNING_ORGANIZATION -e LIGHTNING_TEAMSPACE -e LIGHTNING_STUDIO -e WANDB_API_KEY -e GC_BUCKET_KEY us-west2-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor:latest",
       ]
     secretEnv:
       [
@@ -87,8 +87,8 @@ steps:
         "GC_BUCKET_KEY",
       ]
 images:
-  - "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer"
-  - "europe-west1-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor"
+  - "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/pokemon-trainer"
+  - "us-west2-docker.pkg.dev/$PROJECT_ID/training-images/lightning-executor"
 availableSecrets:
   secretManager:
     - versionName: projects/$PROJECT_ID/secrets/LIGHTNING_API_KEY/versions/latest
