changed ports to 8000:8000 in Dockerfile, run_docker.sh and start_server.sh

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,7 @@ RUN pip install -r /server/requirements.txt
 # Copy code
 ADD . /server
 
+EXPOSE 8000
 # Run FastAPI server
 CMD ["bash", "start_server.sh"]
 
